
[TestMarkCommand/marks_the_focused_window_-_`marks_mark_mark1` - 1]
[]aerospacecli.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1"},
}
[]string{"mark", "mark1"}
result:

Replaced all marks with 'mark1'
---

[TestMarkCommand/marks_the_focused_window_-_`marks_mark_mark1_--window-id_2` - 1]
[]aerospacecli.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1"},
    {WindowID:2, WindowTitle:"title2", AppName:"app2"},
}
[]string{"mark", "mark1", "--window-id", "2"}
result:

Replaced all marks with 'mark1'
---

[TestMarkCommand/marks_the_focused_window_-_`marks_mark_--add` - 1]
[]aerospacecli.Window{
    {WindowID:1, WindowTitle:"title1", AppName:"app1"},
    {WindowID:2, WindowTitle:"title2", AppName:"app2"},
}
[]string{"mark", "mark2", "--add"}
result:

Added mark: mark2
---
